@@ -1,3 +1,7 @@
+Sat Dec 29 20:16:37 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
+ - drivers/megatec.c: detect OB status while OFF.
+
 Sat Dec 29 16:40:45 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 
  * drivers/megatec.c:
